--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ridb_rrmd_site",
-  "version": "0.1.0",
+  "version": "1.0.0-beta",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
