--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ridb_rrmd_site",
   "version": "1.0.3",
+  "homepage": "https://sintef-infosec.github.io/dwc-risk-explorer",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
